--- a/weather/weather.html
+++ b/weather/weather.html
@@ -10,10 +10,11 @@
   </head>
 
   <body>
-    <form id="target" class="formy">
+<div class="formy">
+    <form id="target">
       <input class="formy" id="city" type="text" placeholder="Your City" value="">
     </form>
-
+</div>
     <div id="info">
 <div id="coordsText"> </div>
 <div id="tempText"></div>
