--- a/final/one.html
+++ b/final/one.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="../images/sky.jpg" type="image/gif">
     <title>need a hand?</title>
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-    <link rel="stylesheet" href="blackorg.css">
+    <link rel="stylesheet" href="one.css">
   </head>
   <body>
 <a href="final/advice.html" class="photos">
