--- a/final/one.html
+++ b/final/one.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="one.css">
   </head>
   <body>
-<a href="final/advice.html" class="photos">
+<a href="advice.html" class="photos">
 <img id="hand" class="pix"src="images/lginvhand.png" alt="">
 <img id="six" class="pix"src="images/lginv6.png" alt="">
 <img id="five" class="pix"src="images/lginv5.png" alt="">
@@ -19,6 +19,12 @@
 <!-- <img id="four" class="pix"src="images/lginv4.png" alt=""> !-->
 <img id="arrow" class="pix"src="images/lginvarrow.png" alt="">
 <img id="snake"class="pix"src="images/lginvsnake.png" alt="">
+<img id="hand" class="pix"src="images/lginvhand.png" alt="">
+<img id="o" class="pix"src="images/overlap1.png" alt="">
+<img id="oo" class="pix"src="images/overlap2.png" alt="">
+<img id="ooo" class="pix"src="images/overlap3.png" alt="">
+<img id="oooo" class="pix"src="images/overlap4.png" alt="">
+<img id="ooooo" class="pix"src="images/overlap5.png" alt="">
 </div>
 
 <script>
@@ -34,7 +40,7 @@ function carousel() {
     myIndex++;
     if (myIndex > x.length) {myIndex = 1}
     x[myIndex-1].style.display = "block";
-    setTimeout(carousel, 500); // Change image every 2 seconds
+    setTimeout(carousel, 400); // Change image every 2 seconds
 }
 </script>
 
