--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
   <details>
     <summary>projects</summary>
     <p>
+    <a href="final/one.html">need advice?</a>
+      <br>
     <a href="weather/weather.html">weathertime</a>
     <br>
     <a href="clock/home.html">///timetime//</a>
