--- a/final/advice.html
+++ b/final/advice.html
@@ -12,14 +12,14 @@
   </head>
   <body>
 
-    <img id="hand" class="draggable" class="ui-widget-content" class="pix"src="images/lginvhand.png" alt="">
-    <img id="six" class="draggable" class="ui-widget-content" class="pix"src="images/lginv6.png" alt="">
-    <img id="five" class="draggable" class="ui-widget-content" class="pix"src="images/lginv5.png" alt="">
-    <img id="three" class="draggable" class="ui-widget-content" class="pix"src="images/lginv3.png" alt="">
-    <img id="one" class="draggable" class="ui-widget-content" class="pix"src="images/lginv1.png" alt="">
-    <img id="two" class="draggable" class="ui-widget-content" class="pix"src="images/lginv2.png" alt="">
-    <img id="four" class="draggable" class="ui-widget-content" class="pix"src="images/lginv4.png" alt="">
-  <!--  <img id="arrow" class="pix"src="images/lginvarrow.png" alt=""> !-->  <img id="snake" class="draggable" class="ui-widget-content" class="pix"src="images/lginvsnake.png" alt="">
+    <img id="hand" class="draggable" class="ui-widget-content" title="hello" class="pix"src="images/lginvhand.png" alt="">
+    <img id="six" class="draggable" class="ui-widget-content" class="pix"src="images/lginv6.png" alt="" title="hi">
+    <img id="five" class="draggable" class="ui-widget-content" class="pix"src="images/lginv5.png" alt="" title="drag me">
+    <img id="three" class="draggable" class="ui-widget-content" class="pix"src="images/lginv3.png" alt="" title="move me">
+    <img id="one" class="draggable" class="ui-widget-content" class="pix"src="images/lginv1.png" alt="" title="drag me around">
+    <img id="two" class="draggable" class="ui-widget-content" class="pix"src="images/lginv2.png" alt="" title="how r u">
+    <img id="four" class="draggable" class="ui-widget-content" class="pix"src="images/lginv4.png" alt="" title="!!">
+  <!--  <img id="arrow" class="pix"src="images/lginvarrow.png" alt=""> !-->  <img id="snake" class="draggable" class="ui-widget-content" class="pix"src="images/lginvsnake.png" alt="" title="hope yr good">
 
 <div class="content">
   <em>need a hand?</em>
