--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <br>
     <a href="intvstillconditional/still.html">still life</a>
     <br>
-    <a href="self/mirrorme.html">how are you</a>
-    <br>
+  <!--  <a href="self/mirrorme.html">how are you</a>
+    <br> !-->
     <a href="intvstillconditional/interview.html">interview</a>
     <br>
     <a href="intvstillconditional/conditional.html">conditional design exercise</a>
