--- a/grapefruit/home.html
+++ b/grapefruit/home.html
@@ -9,14 +9,14 @@
   <body>
 <div id="title">
 
-<a href="voice.html">g</a>
-<a href="earth.html">r</a>
-<a href="orchestra.html">a</a>
-<a href="city.html">p</a>
-<a href="shoot.html">e</a>
-<a href="x.html">f</a>
-<a href="x.html">r</a>
-<a href="x.html">u</a>
+<a href="voice.html" title="voice">g</a>
+<a href="earth.html" title="earth">r</a>
+<a href="orchestra.html" title="orchestra">a< title/a>
+<a href="city.html" title="city">p</a>
+<a href="voice.html" title="voice">e</a>
+<a href="earth.html" title="earth">f</a>
+<a href="orchestra.html" title="orchestra">r< </a>
+<a href="city.html" title="city">u</a>
 <a href="x.html">i</a>
 <a href="x.html">t</a>
 
