--- a/clock/clock1.html
+++ b/clock/clock1.html
@@ -1,55 +1,42 @@
 <!DOCTYPE html>
-<!-- saved from url=(0071)http://parsons.callil.com/course-materials/class-9/resources/index.html -->
-<html lang="en" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="demo1.css">
-    <script type="text/javascript" src="./demo1_files/jquery.min.js"></script>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <link rel="icon" href="../images/red.jpg" type="image/gif">
+    <title>clock one</title>
+    <link rel="stylesheet" href="clock1.css">
   </head>
-
+  <body>
     <div id="clock">
-      <section id="sec" style="transform: rotate(252deg);"></section>
-      </div>
-      <section id="hours" style="transform: rotate(252deg);"></section>
-      <section id="mins" style="transform: rotate(252deg);"></section>
+      <section id="sec" style="transform: rotate(72deg);"></section>
+      <section id="mins" style="transform: rotate(72deg);"></section>
 
-
-
-</style>
-</div>
-
+      <section id="hours" style="transform: rotate(72deg);"></section>
     </div>
-  </script>
-</script>
 
-</div>
-</div>
-  <script>
-  $(function() {
+    <script>
+    $(function() {
       setInterval( function() {
         var color = 0;
         var seconds = new Date().getSeconds();
-      //  var hours = new Date().getHours();
-      //  var mins = new Date().getMinutes();
+          var hours = new Date().getHours();
+           var mins = new Date().getMinutes();
 
         var sdegree = seconds * 6;
-        //var hdegree = hours * 6;
-        //var mdegree = minutes * 6;
+        var hdegree = hours * 6;
+        var mdegree = mins * 6;
 
         var srotate = "rotate(" + sdegree + "deg)";
-        //var hrotate = "rotate(" + hdegree + "deg)";
-        //var mrotate = "rotate(" + mdegree + "deg)";
+        var hrotate = "rotate(" + hdegree + "deg)";
+        var mrotate = "rotate(" + mdegree + "deg)";
 
-        if(color < 255){
-          color = seconds;
-        } else {
-          color = 0;
-        }
         $("#sec").css({ "transform": srotate });
-        //$("#hours").css({ "transform": hrotate });
-        //$("#mins").css({ "transform": mrotate });
+        $("#hour").css({ "transform": hrotate });
+        $("#mins").css({ "transform": mrotate });
 
       }, 1000 );
-  });
-  </script>
-
-</body></html>
+    });
+    </script>
+  </body>
+</html>
