--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
       <br>
     <a href="weather/weather.html">weathertime</a>
     <br>
+    <a href="clock/clockhome.html">what time is it?</a>
+    <br>
     <a href="grapefruit/home.html">grapefruit</a>
     <br>
     <a href="flyer/flyer.html">flyer</a>
