--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <br>
     <a href="grapefruit/home.html">grapefruit</a>
     <br>
-    <a href="flyer/flyer.html">flyer</a>
+  <!--  <a href="flyer/flyer.html">flyer</a> -->
     <br>
     <a href="intvstillconditional/still.html">still life</a>
     <br>
